retrieveUnpackaged/objects/Action__c.object
<CustomObject>
    <fields>
        <fullName>Action_Requested__c</fullName>
        <label>Action Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accretion of Duties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FPL__c</fullName>
        <label>FPL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTHER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTHER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>PLCD</fullName>
                </value>
                <value>
                    <fullName>ITD</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SME_Tel__c</fullName>
        <label>SME Tel#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>Actions_List_View</fullName>
        <columns>NAME</columns>
        <columns>Action_Requested__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Office__c</columns>
        <columns>SME__c</columns>
        <columns>SME_Tel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Actions List View</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>